# score-addon-samplette

./: CMakeLists.txt  README.md  addon.json  release.sh  score_addon_samplette.cpp  score_addon_samplette.hpp
.github/workflows/: jit.yml
Samplette/: CommandFactory.cpp  CommandFactory.hpp  Executor.cpp  Executor.hpp  Inspector.cpp  Inspector.hpp  Layer.hpp  LocalTree.cpp  LocalTree.hpp  Metadata.hpp  Presenter.cpp  Presenter.hpp  Process.cpp  Process.hpp  View.cpp  View.hpp
